@@ -3,6 +3,7 @@
 	  <adam.cassar@netregistry.com.au>)
 	- Add Zone.toMasterFile() (based on code from Adam Cassar)
 	- Performance enhancements to the Name object.
+	- Add the "-t type" option to the lookup program.
 
 6/16/2002
 	- Update lots of code to use Collections instead of JDK 1.1
